--- a/style.css
+++ b/style.css
@@ -22,10 +22,33 @@
     text-align: right;
 }
 
+.txt-center{
+    text-align: center;
+}
+
+nav.navbar{
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+li.litem{
+    color: white;
+}
+
+li.litem:hover{
+    color: aqua;
+}
+
 body{
     margin: 0;
 }
 
-hr{
-    margin-top: 0;
+ul{
+    padding: 10px;
+    margin: 0;
+    list-style-type: none;
+    display: flex;
+    gap: 20px;
 }
