--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@
     user-select: none;
 }
 
+.margin-auto{
+    margin: auto;
+}
+
 nav.navbar{
     background-color: black;
     display: flex;
