--- a/style.css
+++ b/style.css
@@ -18,37 +18,26 @@
     text-align: center;
 }
 
-.txt-right{
-    text-align: right;
-}
-
-.txt-center{
-    text-align: center;
-}
-
-.no-select{
+.ns{
     user-select: none;
-}
-
-.margin-auto{
-    margin: auto;
-}
-
-.margin-bottom-none{
-    margin-bottom: 0;
 }
 
 nav.navbar{
     background-color: black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
-div.space-between{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.left{
+    justify-self: start;
+}
+
+.right{
+    justify-self: end;
+}
+
+.center{
+    justify-self: center;
 }
 
 li.litem{
@@ -60,6 +49,12 @@ li.litem:hover{
     animation: hilightToRight 2s forwards;
 }
 
+div.qg{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
 @keyframes hilightToRight {
     0% {transform: scale(1)}
     100% {transform: scale(1.2);}
@@ -69,10 +64,10 @@ body{
     margin: 0;
 }
 
-ul{
+ul.pl{
     padding: 10px;
     margin: 0;
     list-style-type: none;
-    display: flex;
-    gap: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
